<resources>
    <!--    <string name="app_name">贵州云上智慧消防</string>-->
    <string name="login_text_info">云南诺盾消防提供云计算服务</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_info">ProjectInfoActivity</string>
    <string name="title_activity_project_system_list">ProjectSystemListActivity</string>
    <string name="title_activity_alarm_message_info">AlarmMessageInfoActivity</string>

    <string name="charge_charts_network_error">通讯异常</string>
    <string name="charge_charts_network_success">通讯正常</string>
    <string name="charge_charts_network_project">联网项目</string>
    <string name="charge_charts_place_holder_count">20888</string>
    <string name="charts_two_alarm_count">当前实时报警数量</string>
    <string name="charts_two_event_count">近24小时事件数量</string>
</resources>
