<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/charts_two_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:src="@mipmap/charge_charts_current_alarm"/>

    <TextView
        android:id="@+id/charts_two_alarm_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/charts_two_image"
        app:layout_constraintLeft_toRightOf="@+id/charts_two_image"
        app:layout_constraintRight_toLeftOf="@+id/charts_two_line"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sp"
        android:text="@string/charge_charts_place_holder_count"/>

    <TextView
        android:id="@+id/charts_two_alarm_text"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/charts_two_image"
        app:layout_constraintBottom_toBottomOf="@+id/charts_two_image"
        android:text="@string/charts_two_alarm_count"
        android:textSize="@dimen/_11sp"
        android:layout_marginStart="15dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/charts_two_line"
        android:layout_width="10dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/menu_normal_bac"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/charts_two_image2"
        app:layout_constraintLeft_toRightOf="@+id/charts_two_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:src="@mipmap/charge_charts_event_count"/>

    <TextView
        android:id="@+id/charts_two_history_count"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/charts_two_image2"
        app:layout_constraintLeft_toRightOf="@+id/charts_two_image2"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sp"
        android:text="@string/charge_charts_place_holder_count"/>

    <TextView
        android:id="@+id/charts_two_history_title"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/charts_two_image2"
        app:layout_constraintBottom_toBottomOf="@+id/charts_two_image2"
        android:text="@string/charts_two_event_count"
        android:textSize="@dimen/_11sp"
        android:layout_marginStart="15dp"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/menu_normal_bac"/>

</androidx.constraintlayout.widget.ConstraintLayout>